--- a/index.ipynb
+++ b/index.ipynb
@@ -28,11 +28,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    len supp  dose\n",
+       "0   4.2   VC   0.5\n",
+       "1  11.5   VC   0.5\n",
+       "2   7.3   VC   0.5\n",
+       "3   5.8   VC   0.5\n",
+       "4   6.4   VC   0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('ToothGrowth.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>len</th>\n",
+       "      <th>supp</th>\n",
+       "      <th>dose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>16.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>16.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>15.2</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>17.3</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>22.5</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     len supp  dose\n",
+       "0    4.2   VC   0.5\n",
+       "1   11.5   VC   0.5\n",
+       "2    7.3   VC   0.5\n",
+       "3    5.8   VC   0.5\n",
+       "4    6.4   VC   0.5\n",
+       "5   10.0   VC   0.5\n",
+       "6   11.2   VC   0.5\n",
+       "7   11.2   VC   0.5\n",
+       "8    5.2   VC   0.5\n",
+       "9    7.0   VC   0.5\n",
+       "10  16.5   VC   1.0\n",
+       "11  16.5   VC   1.0\n",
+       "12  15.2   VC   1.0\n",
+       "13  17.3   VC   1.0\n",
+       "14  22.5   VC   1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(15)"
    ]
   },
   {
@@ -46,11 +287,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               sum_sq    df           F        PR(>F)\n",
+      "C(supp)    205.350000   1.0   11.446768  1.300662e-03\n",
+      "dose      2224.304298   1.0  123.988774  6.313519e-16\n",
+      "Residual  1022.555036  57.0         NaN           NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "formula = 'len ~ C(supp) + dose'\n",
+    "lm = ols(formula, df).fit()\n",
+    "table = sm.stats.anova_lm(lm, typ=2)\n",
+    "print(table)"
    ]
   },
   {
@@ -66,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Your comment here"
+    "Both supplement and dosage seem to have an effect as both have PR(>F) values smaller than 0.05. Dosage may have the greater impact."
    ]
   },
   {
@@ -95,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
